# Joshua

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
Joshua/Headers/: eliza.hpp  joshua.hpp  shader.hpp
Joshua/Resources/Shaders/: simple.vert
Joshua/Shaders/: simple.frag
Joshua/Sources/: eliza.cpp  imgui_main.xpp  main.cpp  main.xpp
